submit button add

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <input type="password" placeholder="Password">
         </div>
 
-        <input class="btn" type="button" value="Sign In">
+        <button type="submit" class="btn">Sign In</button>
         
     </div>
 </body>
